# CG_Project

./: .gitmodules  README.md  TODO CG Project.txt
Project/: TODO.txt
Report/Finished Report/TCD SCSS Thesis Template (1)(1)/: main.tex
Report/Finished Report/TCD SCSS Thesis Template (1)(1)/Results/: results.tex
Report/Finished Report/TCD SCSS Thesis Template (1)(1)/conclusion/: conclusion.tex
Report/Finished Report/TCD SCSS Thesis Template (1)(1)/introduction/: introduction.tex
Report/Report_SRC1/: main.tex
Report/Report_SRC1/Results/: results.tex
Report/Report_SRC1/introduction/: introduction.tex
Report/Report_SRC1/title/: title.tex
Resources/Lecturer/Recom_Reading/: Slides_Recs.txt
Resources/Lecturer/Slides/: .01_introduction.pdf.icloud  .04_graphics_pipeline.pdf.icloud  .05_textures.pdf.icloud  .06_modeling.pdf.icloud  .11_sota_cgi.pdf.icloud
lab2/lab2/: CMakeLists.txt
lab2/lab2/lab2/: box.frag  box.vert  ground.frag  ground.vert  hint.txt  lab2_building.cpp  lab2_skybox.cpp  light.frag  light.vert  project.frag  project.vert
lab4/lab4/: CMakeLists.txt
lab4/lab4/lab4/: lab2_building(OG).cpp  lab2_building_roads.cpp  lab4_character.cpp  lab4_skeleton.cpp  project.cpp  template.cpp
lab4/lab4/lab4/shader/: bot.frag  bot.vert
